# docker-dns-reso

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  dev-setup  docker-dns-updater.py  docker-dns-updater.sh  install.py  install.sh  network-test.sh  network-tester.py  network_test.sh  pyproject.toml  tester.sh
dnsmasq/: generate-dnsmasq-config.sh  help-internal.conf
macos/: docker-dns-updater.plist
macos/resolver/: docker.internal
net-tester/: dev-sast  orchestrator.py
net-tester/modules/: capture.py  chatgpt.py  dnsmasq.py  docker.py  install_utils.py  logger.py  network.py  processes.py  tailscale.py  utils.py
net_tester/: coordinator.py  dev-sast  dev-setup.md  orchestrator.py
net_tester/modules/: _dns_sd.py  arp.py  capture.py  chatgpt.py  dnsmasq.py  docker.py  docker_dns.py  install_utils.py  logger.py  mdns.py  network.py  openvpn.py  quad9.py  resolver.py  tailscale.py  types.py  utils.py
systemd/: docker-dns-updater.service  docker-dns-updater.timer
